--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -18,6 +18,8 @@
       <li>
         <a class="nav-link">Año escolar {{dataService.anio}}</a>
       </li>
-     
+      <li>
+        <a class="nav-link" (click)="cerrarSesion()">Cerrar Sesión</a>
+      </li>
     </ul>
   </nav>
