--- a/src/app/admin/profesor/cursosa/cursosa.component.html
+++ b/src/app/admin/profesor/cursosa/cursosa.component.html
@@ -9,7 +9,8 @@
         <div id="myGrid" class="ag-theme-alpine" style="width: 100%; height: 100%">
             <ag-grid-angular #agGrid style="width: 100%px; height: 500px" class="ag-theme-alpine" [rowData]="rowData"
                 [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" rowSelection="single"
-                (gridReady)="OnGridReady($event)">
+                (gridReady)="OnGridReady($event)"
+                (selectionChanged)="onSelectionChanged($event)">
             </ag-grid-angular>
         </div>
     </div>
